Remove /public prefix from redirects

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@ button{margin-top:1rem;background:#704bff;color:#fff;border:none;padding:.7rem
 location.href='/public/thankyou.html';
       if(data.status!=='ok')         return alert('Error: '+data.status);
       sessionStorage.setItem('lookup',JSON.stringify(data));
-      location.href='/public/rate.html';
+      location.href='/rate.html';
     }
   </script>
 </body>
