--- a/public/rate.html
+++ b/public/rate.html
@@ -1,49 +1,106 @@
 <!DOCTYPE html>
-<html><head>
-<meta charset="utf-8" />
-<title>Angel-Thon – Rate Facilitators</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-<style>
-body{font-family:Roboto,Arial,sans-serif;background:#fafcff;padding:1rem 4vw}
-h2{color:#704bff;margin:0 0 .7rem}
-table{width:100%;border-spacing:0 8px}
-td:first-child{width:40%} input[type=range]{width:100%}
-button{margin-top:1rem;background:#704bff;color:#fff;border:none;padding:.8rem 2rem;border-radius:10px;font-size:1rem;cursor:pointer}
-</style>
-</head><body>
-<h2 id="heading"></h2>
-<div id="meta"></div>
-<form id="form"></form>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>Facilitator Ratings</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <style>
+    :root{--violet:#704bff}
+    html,body{margin:0;font-family:Roboto,Arial,sans-serif;background:#f5f7ff;color:#111}
+    h2{color:var(--violet);margin:0 0 1rem;font-weight:500;font-size:1.25rem}
+    h3{margin:1.8rem 0 .6rem;font-size:1rem;font-weight:500}
+    section{max-width:920px;margin:0 auto;padding:1rem 4vw}
+    table{width:100%;border-collapse:collapse}
+    td{padding:.35rem .4rem}
+    td.name{width:34%;white-space:nowrap}
+    /* slider + live value */
+    .wrap{position:relative}
+    input[type=range]{width:100%}
+    .val{position:absolute;top:100%;left:50%;transform:translate(-50%,.25rem);
+         font-size:.8rem;font-weight:500;color:var(--violet)}
+    /* mobile */
+    @media(max-width:640px){
+      table,tr,td{display:block;width:100%}
+      td.name{margin-top:1.4rem}
+      .wrap{margin-top:.35rem}
+      .val{left:auto;right:0;transform:translateY(.2rem)}
+    }
+    button{display:block;margin:2.2rem auto 1rem;background:var(--violet);
+           color:#fff;border:none;padding:.9rem 2.6rem;font-size:1rem;
+           border-radius:12px;cursor:pointer}
+    button:hover{background:#5d3ef8}
+    .warn{text-align:center;font-size:.85rem;color:#b40000}
+  </style>
+</head>
+<body>
+<section>
+  <h2 id="heading"></h2>
+  <div id="meta"></div>
+  <form id="form"></form>
+  <p class="warn">* Scores can’t be edited once submitted</p>
+</section>
 
 <script>
-const data=JSON.parse(sessionStorage.getItem('lookup')||'{}');
-if(!data.facilitators){location.href='/';}
-document.getElementById('heading').textContent=data.team+' — Facilitator Ratings';
-document.getElementById('meta').innerHTML=`<b>Name:</b> ${data.name}<br><b>Email:</b> ${data.email}`;
-const crit=['Visibility & Presence','Energy & Motivation','Creative Engagement','Responsiveness','Encouragement & Acknowledgement','Emotional Support & Vibe Holding','Team Bonding','Consistency in Posting Prompts','Leadership Quality','Overall Experience'];
-const form=document.getElementById('form');
-crit.forEach(c=>{
-  const h=document.createElement('h3');h.textContent=c;form.appendChild(h);
-  const tbl=document.createElement('table');form.appendChild(tbl);
-  data.facilitators.forEach(f=>{
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${f}</td><td><input type="range" min="1" max="10" value="5"></td><td>5</td>`;
-    tr.querySelector('input').oninput=e=>tr.lastChild.textContent=e.target.value;
-    tbl.appendChild(tr);
-  });
-});
-const btn=document.createElement('button');btn.textContent='Submit Feedback';form.appendChild(btn);
-form.onsubmit=async ev=>{
+/* ---------- data from previous page ---------- */
+const data = JSON.parse(sessionStorage.getItem('lookup')||'{}');
+if (!data.facilitators) location.href='/';
+
+/* ---------- page header ---------- */
+document.getElementById('heading').textContent =
+  data.team + ' — Facilitator Ratings';
+document.getElementById('meta').innerHTML =
+  `<b>Name:</b> ${data.name}<br><b>Email:</b> ${data.email}`;
+
+/* ---------- criteria ---------- */
+const crit = [
+ 'Visibility & Presence','Energy & Motivation','Creative Engagement',
+ 'Responsiveness','Encouragement & Acknowledgement','Emotional Support & Vibe Holding',
+ 'Team Bonding','Consistency in Posting Prompts','Leadership Quality','Overall Experience'
+];
+
+/* ---------- build form ---------- */
+const form = document.getElementById('form');
+
+const makeRow = fac => `
+  <tr>
+    <td class="name">${fac}</td>
+    <td>
+      <div class="wrap">
+        <input type="range" min="1" max="10" value="5"
+               oninput="this.nextElementSibling.textContent=this.value">
+        <span class="val">5</span>
+      </div>
+    </td>
+  </tr>`;
+
+const blocks = crit.map((c,i)=>`
+  <h3>Q${i+1}. ${c}</h3>
+  <table>${data.facilitators.map(makeRow).join('')}</table>`).join('');
+
+form.innerHTML = blocks +
+  '<button>Submit Feedback</button>';
+
+/* ---------- submit ---------- */
+form.addEventListener('submit', async ev=>{
   ev.preventDefault();
-  const sliders=[...document.querySelectorAll('input[type=range]')];
-  const scores=[];
+  const sliders = [...document.querySelectorAll('input[type=range]')];
+  const scores  = [];
   data.facilitators.forEach((fac,i)=>{
-    const vals=[];for(let c=0;c<crit.length;c++){vals.push(+sliders[c*data.facilitators.length+i].value);}
+    const vals=[];
+    for(let c=0;c<crit.length;c++){
+      vals.push(+sliders[c*data.facilitators.length+i].value);
+    }
     scores.push({fac,vals});
   });
-  const payload={...data,scores};
-  await fetch('/api/feedback',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+  const payload = {...data,scores};
+  await fetch('/api/feedback',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify(payload)
+  });
   location.href='/thankyou.html';
-};
+});
 </script>
-</body></html>
+</body>
+</html>
