--- a/public/rate.html
+++ b/public/rate.html
@@ -1,101 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Facilitator Ratings | AngelThon 7.0</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+<meta charset="utf-8" />
+<title>Facilitator Ratings | AngelThon 7.0</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <style>
-    /* ---------- Theme ---------- */
-    :root{
-      --violet:#6d4bff;
-      --violet-light:#b6a6ff;
-      --bg-1:#f9faff;
-      --bg-2:#e9edff;
-      --bg-3:#dee4ff;
-      --card:#ffffffee;
-      --txt:#111;
-      --shadow:rgba(0,0,0,.08);
-      --radius:18px;
-    }
+<style>
+/* ---------- Theme ---------- */
+:root{
+  --violet:#6d4bff;
+  --violet-light:#b6a6ff;
+  --bg-1:#f9faff; --bg-2:#e9edff; --bg-3:#dee4ff;
+  --card:#ffffffee; --txt:#111; --shadow:rgba(0,0,0,.08);
+  --radius:18px;
+}
+@keyframes grad {0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
+@keyframes pop  {0%{opacity:0;transform:translateY(32px) scale(.95)}100%{opacity:1;transform:none}}
+@keyframes up   {from{opacity:0;transform:translateY(22px)}to{opacity:1;transform:none}}
+@keyframes pulse{0%,100%{transform:none;box-shadow:0 4px 9px rgba(0,0,0,.12)}50%{transform:translateY(-3px);box-shadow:0 8px 20px rgba(0,0,0,.18)}}
 
-    @keyframes gradientShift{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
-    @keyframes cardPop{0%{opacity:0;transform:translateY(32px) scale(.95)}100%{opacity:1;transform:translateY(0) scale(1)}}
-    @keyframes fadeUp{from{opacity:0;transform:translateY(24px)}to{opacity:1;transform:translateY(0)}}
-    @keyframes btnPulse{0%,100%{transform:translateY(0);box-shadow:0 4px 10px rgba(0,0,0,.12)}50%{transform:translateY(-3px);box-shadow:0 8px 18px rgba(0,0,0,.18)}}
+/* ---------- Base ---------- */
+*{box-sizing:border-box}
 
-    /* ---------- Base ---------- */
-    html,body{
-      margin:0;
-      font-family:Roboto,system-ui,-apple-system,"Segoe UI",sans-serif;
-      background:linear-gradient(135deg,var(--bg-1),var(--bg-2),var(--bg-3));
-      background-size:400% 400%;animation:gradientShift 10s linear infinite;
-      color:var(--txt);-webkit-font-smoothing:antialiased;min-height:100vh;
-    }
-    section{
-      max-width:960px;margin:48px auto;
-      padding:32px 6vw 56px;
-      background:var(--card);backdrop-filter:blur(6px);
-      border-radius:var(--radius);
-      box-shadow:0 12px 28px var(--shadow);
-      animation:cardPop .7s cubic-bezier(.25,.8,.25,1) both;
-    }
+html,body{
+  margin:0;font-family:Roboto,system-ui,-apple-system,"Segoe UI",sans-serif;
+  background:linear-gradient(135deg,var(--bg-1),var(--bg-2),var(--bg-3));
+  background-size:400% 400%;animation:grad 10s linear infinite;
+  color:var(--txt);-webkit-font-smoothing:antialiased;min-height:100vh;
+}
+section{
+  max-width:960px;margin:48px auto;padding:32px 6vw 56px;
+  background:var(--card);backdrop-filter:blur(6px);
+  border-radius:var(--radius);box-shadow:0 12px 28px var(--shadow);
+  animation:pop .7s cubic-bezier(.25,.8,.25,1) both;
+}
 
-    /* ---------- Typography ---------- */
-    h1.event{margin:0 0 12px;font-size:2rem;font-weight:600;color:var(--violet);animation:fadeUp .6s ease-out both}
-    h2{margin:0 0 28px;font-size:1.8rem;font-weight:500;color:var(--violet)}
-    h3{margin:44px 0 14px;font-size:1.1rem;font-weight:500;color:var(--violet);animation:fadeUp .6s ease-out both}
+/* ---------- Typography ---------- */
+h1.event{margin:0 0 12px;font-size:2rem;font-weight:600;color:var(--violet);animation:up .6s ease-out both}
+h2{margin:0 0 28px;font-size:1.75rem;font-weight:500;color:var(--violet)}
+h3{margin:44px 0 14px;font-size:1.05rem;font-weight:500;color:var(--violet);animation:up .6s ease-out both}
 
-    /* ---------- Table layout ---------- */
-    table{width:100%;border-collapse:collapse}
-    td{padding:4px 6px;vertical-align:top}           /* tighter gap */
-    td.name{width:30%;white-space:nowrap;font-weight:500}
+/* ---------- Table layout ---------- */
+table{width:100%;border-collapse:collapse}
+td{padding:4px 4px 0 0;vertical-align:top}
+td.name{width:32%;white-space:nowrap;font-weight:500}
 
-    /* ---------- Slider ---------- */
-    input.range{-webkit-appearance:none;width:100%;height:8px;border-radius:4px;background:#d7d7d7;cursor:pointer;outline:none;transition:background .15s}
-    input.range::-webkit-slider-thumb{-webkit-appearance:none;width:20px;height:20px;border-radius:50%;background:var(--violet);box-shadow:0 0 0 3px var(--violet-light);transition:transform .2s}
-    input.range:active::-webkit-slider-thumb{transform:scale(1.25)}
-    input.range::-moz-range-thumb{width:20px;height:20px;border:none;border-radius:50%;background:var(--violet)}
+/* ---------- Slider ---------- */
+input.range{-webkit-appearance:none;width:100%;height:8px;border-radius:4px;
+  background:#d7d7d7;cursor:pointer;outline:none;transition:background .15s}
+input.range::-webkit-slider-thumb{-webkit-appearance:none;width:18px;height:18px;
+  border-radius:50%;background:var(--violet);box-shadow:0 0 0 3px var(--violet-light);transition:transform .2s}
+input.range:active::-webkit-slider-thumb{transform:scale(1.25)}
+input.range::-moz-range-thumb{width:18px;height:18px;border:none;border-radius:50%;background:var(--violet)}
 
-    .wrap{margin-top:2px;position:relative;animation:fadeUp .6s ease-out both}
-    .scale{display:flex;justify-content:space-between;margin-top:6px;padding:0 2px;font-size:.8rem;font-weight:600;color:#444;user-select:none;line-height:1}
+.wrap{margin-top:2px;position:relative;animation:up .6s ease-out both}
+.scale{display:flex;justify-content:space-between;margin-top:6px;padding:0 1px 0 2px;
+  font-size:.78rem;font-weight:600;color:#444;user-select:none;line-height:1}
 
-    /* hide middle digits on ultra-narrow screens so they don’t wrap */
-    @media(max-width:420px){
-      .scale span:nth-child(3),
-      .scale span:nth-child(4),
-      .scale span:nth-child(5),
-      .scale span:nth-child(6),
-      .scale span:nth-child(7),
-      .scale span:nth-child(8){display:none}
-    }
+/* hide mid-digits on very narrow phones */
+@media(max-width:430px){
+  .scale span:nth-child(3),.scale span:nth-child(4),
+  .scale span:nth-child(5),.scale span:nth-child(6),
+  .scale span:nth-child(7),.scale span:nth-child(8){display:none}
+}
 
-    /* ---------- Button ---------- */
-    button{
-      display:block;margin:56px auto 12px;background:var(--violet);color:#fff;
-      border:none;padding:16px 44px;font-size:1rem;border-radius:var(--radius);
-      cursor:pointer;transition:background .2s
-    }
-    button:hover{background:#5d3ef8;animation:btnPulse .6s ease-out}
+/* ---------- Button ---------- */
+button{
+  display:block;margin:56px auto 12px;background:var(--violet);color:#fff;
+  border:none;padding:15px 44px;font-size:1rem;border-radius:var(--radius);
+  cursor:pointer;transition:background .2s
+}
+button:hover{background:#5d3ef8;animation:pulse .6s ease-out}
 
-    .warn{text-align:center;font-size:.85rem;color:#b40000}
+.warn{text-align:center;font-size:.85rem;color:#b40000}
 
-    /* ---------- Mobile tweaks ---------- */
-    @media(max-width:680px){
-      table,tr,td{display:block;width:100%}
-      section{margin:24px auto;padding:24px 5vw 40px}
-      h1.event{font-size:1.55rem;margin-bottom:8px}
-      h2{font-size:1.4rem;margin-bottom:20px}
-      h3{margin:32px 0 12px;font-size:1rem}
-      input.range{height:12px}
-      input.range::-webkit-slider-thumb,
-      input.range::-moz-range-thumb{width:24px;height:24px}
-      button{padding:14px 32px;font-size:.95rem}
-    }
-  </style>
+/* ---------- Mobile tweaks ---------- */
+@media(max-width:680px){
+  table,tr,td{display:block;width:100%}
+  section{margin:24px auto;padding:24px 5vw 40px}
+  h1.event{font-size:1.55rem;margin-bottom:8px}
+  h2{font-size:1.35rem;margin-bottom:20px}
+  h3{margin:32px 0 12px;font-size:1rem}
+  input.range{height:12px}
+  input.range::-webkit-slider-thumb,input.range::-moz-range-thumb{width:22px;height:22px}
+  button{padding:14px 32px;font-size:.95rem}
+}
+</style>
 </head>
-
 <body>
 <section>
   <h1 class="event">AngelThon 7.0</h1>
@@ -106,13 +98,12 @@
 </section>
 
 <script>
-/* ---------- helper: colour-fill slider track ---------- */
+/* colour-fill track */
 function tint(el){
   const pct=((el.value-el.min)/(el.max-el.min))*100;
   el.style.background=`linear-gradient(90deg,var(--violet) ${pct}%,#d7d7d7 ${pct}%)`;
 }
 
-/* ---------- MAIN ---------- */
 (function(){
   const data=JSON.parse(sessionStorage.getItem('lookup')||'{}');
   if(!Array.isArray(data.facilitators)||!data.facilitators.length){
@@ -122,7 +113,7 @@ function tint(el){
   document.getElementById('heading').textContent=
     `${data.team} — Facilitator Ratings`;
   document.getElementById('meta').innerHTML=
-    `<b>Name:</b> ${data.name}<br><b>Email:</b> ${data.email}`;
+    `<b>Name:</b> ${data.name}<br><b>Email:</b> ${data.email}<br><b>Mobile:</b> ${data.mobile || '-'}`;
 
   const crit=[
     'Visibility & Presence','Energy & Motivation','Creative Engagement',
@@ -132,18 +123,15 @@ function tint(el){
   ];
 
   const form=document.getElementById('form');
-  const scaleRow='<div class="scale">'+
-                 Array.from({length:10},(_,i)=>`<span>${i+1}</span>`).join('')+
-                 '</div>';
-
-  const rowHTML=fac=>`
+  const scale='<div class="scale">'+Array.from({length:10},(_,i)=>`<span>${i+1}</span>`).join('')+'</div>';
+  const row=fac=>`
     <tr>
       <td class="name">${fac}</td>
       <td>
         <div class="wrap">
           <input class="range" type="range" min="1" max="10" value="5"
                  aria-label="Rating for ${fac}" oninput="tint(this)">
-          ${scaleRow}
+          ${scale}
         </div>
       </td>
     </tr>`;
@@ -151,11 +139,11 @@ function tint(el){
   form.innerHTML=
     crit.map((c,i)=>`
       <h3 style="animation-delay:${i*0.05}s">Q${i+1}. ${c}</h3>
-      <table>${data.facilitators.map(rowHTML).join('')}</table>
+      <table>${data.facilitators.map(row).join('')}</table>
     `).join('')+
     '<button type="submit">Submit Feedback</button>';
 
-  /* colour all initial slider tracks */
+  /* initial colour-fill */
   document.querySelectorAll('input.range').forEach(tint);
 
   form.addEventListener('submit',async ev=>{
@@ -176,10 +164,10 @@ function tint(el){
         body:JSON.stringify({...data,scores})
       });
       if(!r.ok)throw new Error(r.status);
-      alert('✅ Feedback submitted!');
+      alert('✅  Feedback submitted!');
       location.href='/thankyou.html';
     }catch(err){
-      alert('Submission failed. Please try again.');
+      alert('Submission failed, please try again.');
       console.error(err);
     }
   });
